# deeplearning

./: README_converter.md  jupyter_to_pdf_converter.py  pyproject.toml
homework2/: exercise-linear_regression.ipynb  gaussian_basis.py  gaussian_predictions.txt  linear_regression-tf2.0.ipynb  main.ipynb  multinomial_basis.py  predictions.txt
homework3/: logistic_regression-exercise.ipynb  main.ipynb  softmax_regression-exercise.ipynb
homework4/: homework4.rar  main.ipynb  tf2.0-exercise.ipynb  tutorial_minst_fnn-numpy-exercise.ipynb  tutorial_minst_fnn-tf2.0-exercise.ipynb
homework5/: CNN_pytorch.ipynb  CNN_pytorch_ch05.ipynb  homework5.rar  main.ipynb  tutorial_minst_cnn-tf2.0-exercise-ch05.ipynb
homework6/: main.ipynb  poem_generation_with_RNN-exercise-ch06.ipynb
homework7/: main.ipynb  sequence_reversal-exercise.ipynb  sequence_reversal_with_attention-exercise.ipynb
