[project]
name = "deeplearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "nbconvert>=7.16.6",
    "numpy>=2.3.3",
    "tensorflow>=2.20.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
